tests/rosetta/transpiler/FS/ackermann-function-3.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Ackermann-function-3' based on the file name 'ackermann-function-3.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(10,38): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(29,19): error FS0001: This expression was expected to have type
    bigint    
but here has type
    int    

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(30,22): error FS0001: Type constraint mismatch. The type 
    int    
is not compatible with type
    System.Numerics.BigInteger    
The type 'int' is not compatible with the type 'System.Numerics.BigInteger'

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(44,22): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(46,17): error FS0001: This expression was expected to have type
    bigint    
but here has type
    int    

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(49,30): error FS0001: Type constraint mismatch. The type 
    int    
is not compatible with type
    System.Numerics.BigInteger    
The type 'int' is not compatible with the type 'System.Numerics.BigInteger'

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(52,30): error FS0001: Type constraint mismatch. The type 
    int    
is not compatible with type
    System.Numerics.BigInteger    
The type 'int' is not compatible with the type 'System.Numerics.BigInteger'

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(55,31): error FS0001: Type constraint mismatch. The type 
    int    
is not compatible with type
    System.Numerics.BigInteger    
The type 'int' is not compatible with the type 'System.Numerics.BigInteger'

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(61,30): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(63,34): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(64,31): error FS0001: Type constraint mismatch. The type 
    int    
is not compatible with type
    System.Numerics.BigInteger    
The type 'int' is not compatible with the type 'System.Numerics.BigInteger'

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(67,39): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(67,55): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(69,35): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(69,70): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(80,31): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.

/workspace/mochi/tests/rosetta/transpiler/FS/ackermann-function-3.fs(80,46): error FS0016: The type 'int' does not have any proper subtypes and cannot be used as the source of a type test or runtime coercion.
